--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="next_btn_content_desc">Navigate to next step</string>
     <string name="no_internet_message_text">Media not available when offline</string>
     <string name="refresh_btn_txt">Refresh</string>
+    <string name="main_activity_error_msg">Oops! Something went wrong. Please check your internet connection and try again</string>
 </resources>
